<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">CHANEL Companion</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_developpers_mode">Mode dév.</string>
    <string name="reader">Lecteurs connectés :</string>
    <string name="list">Rechercher</string>
    <string name="informations_lecteur">Informations lecteur :</string>
    <string name="get_state">Etat du lecteur</string>
    <string name="open">Ouvrir</string>
    <string name="close">Fermer</string>
    <string name="power_action">Protocole de démarrage :</string>
    <string name="power">Démarrer</string>
    <string name="get_protocol">Get Protocole</string>
    <string name="transmit_control">Commandes :</string>
    <string name="transmit">Transmettre APDU</string>
    <string name="secure_pin_entry">Secure PIN Entry:</string>
    <string name="get_features">Fonctionnalités</string>
    <string name="enter_apdu_here">Entrer APDU : FF B0 00 04 10</string>
    <string name="ReadTag">Lire</string>
    <string name="WriteTag">Ecrire</string>
    <string name="action_simple_mode">Mode simplifié</string>
    <string name="parametres">Paramètres</string>
    <string name="langue">Langue</string>
    <string name="theme">Thème</string>
    <string name="notifications">Notifications</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="veuillez_scanner_une_carte">Veuillez scanner une carte…</string>
    <string name="veuillez_brancher_le_lecteur">Veuillez brancher le lecteur…</string>
    <string name="action_help">Besoin d\'aide ?</string>
    <string name="help_title">Besoin d\'aide ?
Vous êtes au bon endroit !</string>
    <string name="help_content">Bienvenue dans la page d\'aide ! </string>
    <string name="help_prob_tech">Si vous rencontrez un problème technique ou une erreur, merci de vous adresser à cette adresse mail-ci :</string>
    <string name="help_share">N\'hésitez pas à partager l\'application autour de vous et à nous mettre 5 étoiles dans le Store ! :)</string>
    <string name="email" translatable="false">chanel.companion@esme.fr</string>
    <string name="dedicace">Application codée par Léo ROUSSELET, Coline CHEN et Kris PIGOT dans le cadre d\'un projet à l\'ESME.</string>
    <string name="niveau_auto">Niveau d\'autorisation pour accéder à la salle :</string>
    <string name="niveau_0">Niveau 0</string>
    <string name="niveau_1">Niveau 1</string>
    <string name="niveau_2">Niveau 2</string>
    <string name="niveau_3">Niveau 3</string>
    <string name="anglais" translatable="false">English</string>
    <string name="francais" translatable="false">Français</string>
    <string name="sombre">Sombre</string>
    <string name="clair">Clair</string>
    <string name="automatique_theme">Automatique</string>
    <string name="nom" translatable="false">Krissou Pigot</string>
    <string name="biographie">Hey !</string>
    <string name="adresse_mail">Adresse mail :</string>
    <string name="poste_occupe">Poste occupé :</string>
    <string name="email_profil" translatable="false">nom.prenom@entreprise.com</string>
    <string name="poste_profil">Ingénieur développement</string>
    <string name="num_tel">Numéro de téléphone :</string>
    <string name="num_tel_profil" translatable="false">01 23 45 67 89</string>
    <string name="niveau_auto_profil">Niveau d\'autorisation :</string>
    <string name="details">Détails</string>
    <string name="mode_avance">Mode avancé</string>
    <string name="lecteur_deco">Lecteur déconnecté</string>
    <string name="mode_simplifie">Vous vous trouvez en mode simplifié</string>
    <string name="click_here">Cliquez sur le logo pour accéder au mode simplifié !</string>
    <string name="modifier">Modifier</string>

</resources>
