<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parametres"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_langue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langue"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_langue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:entries="@array/spinner_langues" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:entries="@array/spinner_themes" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/sw_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/sauvegarder_param"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sauvegarder"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:onClick="sauvegarder" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Autorisations de salles -->
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tv_auto_salles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/niveau_auto"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_auto_salles"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:entries="@array/spinner_items_values" />

    </LinearLayout>

    <Button
        android:id="@+id/sauvegarder_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sauvegarder"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:onClick="maj_autorisations" />

</LinearLayout>


